<resources>
    <string name="app_name">SAPcult</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_buildings_and_monuments">Buildings and Monuments</string>
    <string name="pref_title_museums">Museums</string>
    <string name="pref_title_most_liked_venues">Most Liked Venues</string>
    <string name="pref_title_favourites">Your Favourite Venues</string>

    <string name="pref_title_duomo">Duomo di Milano</string>

    <string name="text_subject_duomo"><b>Milan Cathedral</b> (Duomo di Milano) is the cathedral church of <b>Milan, Italy</b>. Dedicated to St Mary of the Nativity (Santa Maria Nascente), it is the seat of the Archbishop of Milan, currently Cardinal Angelo Scola. The <b>Gothic</b> cathedral took nearly six centuries to complete. It is the largest church in Italy (the larger St. Peter\'s Basilica is in the State of Vatican City) and the fifth largest in the world.</string>
    <string name="text_arch_duomo">
        The plan consists of a <b>nave with four side-aisles</b>, crossed by a transept and then followed by choir and apse. The height of the nave is about <b>45 meters</b>, the highest Gothic vaults of a complete church (less than the 48 meters of Beauvais Cathedral, which was never completed).
        The roof is open to tourists (for a fee), which allows many a close-up view of some spectacular sculpture that would otherwise be unappreciated. The roof of the cathedral is renowned for the forest of openwork pinnacles and spires, set upon delicate flying buttresses.
        The cathedral\'s five broad naves, divided by 40 pillars, are reflected in the hierarchic openings of the façade. Even the transepts have aisles. The nave columns are <b>24.5 metres (80 ft) high</b>, and the apsidal windows are 20.7 x 8.5 metres (68 x 28 feet). The huge building is of brick construction, faced with marble from the quarries which <b>Gian Galeazzo Visconti</b> donated in perpetuity to the cathedral chapter. Its maintenance and repairs are very complicated.
        In 2015, Milan\'s cathedral developed a new lighting system based on LED lights.
    </string>
    <string name="text_info_duomo">
        <b>Visit hours</b>: 8AM - 7PM\n
        <b>Cathedral Ticket</b>: 2€\n
        <b>Terrace Ticket</b>: 9€\n
        <b>Complete Pass</b>: 15€\n
        \n
        <i>Reduced fees may be applicable during festivities.</i>
    </string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
